--- a/style.css
+++ b/style.css
@@ -785,6 +785,12 @@ body.page .main-navigation {
 
 .entry .entry-content a {
   text-decoration: none;
+  font-family: 'Montserrat';
+  color: black;
+}
+
+img:hover {
+  opacity: 0.5;
 }
 
 @-webkit-keyframes anim1 {
